--- a/index.html
+++ b/index.html
@@ -26,3 +26,7 @@ COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII
     <p id="risposta"></p>
 </body>
 </html>
+
+
+
+<img src="coser.png" width=700px height=700px>
