--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII
             var numero = document.getElementById("numeroInput").value;
             var risposta = document.getElementById("risposta");
             if (numero !== "") {
-                risposta.innerHTML = "BALISTRI";
+                risposta.innerHTML = "<big>BALISTRI<big>";
             } else {
                 risposta.innerHTML = "";
             }
