--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII
+
+
+
+<img src="coser.png" width=1500px height=700px>
+
+<big>COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</big>
 
 
 <!DOCTYPE html>
@@ -12,7 +17,7 @@ COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII
             var numero = document.getElementById("numeroInput").value;
             var risposta = document.getElementById("risposta");
             if (numero !== "") {
-                risposta.innerHTML = "<big>BALISTRI<big>";
+                risposta.innerHTML = <big> "BALISTRI"</big>;
             } else {
                 risposta.innerHTML = "";
             }
@@ -28,5 +33,3 @@ COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII
 </html>
 
 
-
-<img src="coser.png" width=700px height=700px>
