--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <img src="coser.png" width=1900px height=1000px>
 
-<big>COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</big>
+<big id = "coser">COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</big>
 
 
 <!DOCTYPE html>
@@ -18,6 +18,9 @@
             color: red;       /* Colore rosso */
             font-weight: bold;
             text-transform: uppercase; /* Trasforma il testo in maiuscolo */
+        }
+        #coser {
+            font-size = 2000px;
         }
     </style>
     <script>
@@ -38,6 +41,7 @@
     <input type="text" id="numeroInput" placeholder="Scrivi un numero" oninput="mostraRisposta()">
     <p id="risposta"></p>
 </body>
+
 </html>
 
 
