--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-transform: uppercase; /* Trasforma il testo in maiuscolo */
         }
         #coser {
-            font-size = 2000px;
+            font-size: 2000px;
         }
     </style>
     <script>
