--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <img src="coser.png" width=1900px height=1000px>
 
-<big id = "coser">COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</big>
+<p id = "coser">COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</p>
 
 
 <!DOCTYPE html>
