--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casella Numero</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            margin-bottom: 20px; /* Spazio tra il titolo e gli altri elementi */
+        }
         #risposta {
             font-size: 200px; /* Grandezza del testo */
             color: red;       /* Colore rosso */
             font-weight: bold;
             text-transform: uppercase; /* Trasforma il testo in maiuscolo */
+            margin-bottom: 20px; /* Spazio tra la risposta e il campo di input */
         }
         #coser {
             font-size: 40px;
             font-weight: bold;
             color: blue; /* Puoi scegliere un altro colore */
+            margin-bottom: 30px; /* Distanza tra il testo "COSER" e il resto */
         }
         img {
             width: 100%; /* Per adattare l'immagine alla larghezza della finestra */
             height: auto; /* Mantiene le proporzioni dell'immagine */
+            margin-bottom: 20px; /* Spazio sotto l'immagine */
+        }
+        input {
+            font-size: 16px;
+            padding: 10px;
+            width: 100%;
+            max-width: 300px;
         }
     </style>
     <script>
