--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         img {
             width: 100%; /* Per adattare l'immagine alla larghezza della finestra */
-            height: auto; /* Mantiene le proporzioni dell'immagine */
+            height: 1000 px; /* Mantiene le proporzioni dell'immagine */
             margin-bottom: 20px; /* Spazio sotto l'immagine */
         }
         input {
