--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             margin-bottom: 30px; /* Distanza tra il testo "COSER" e il resto */
         }
         img {
-            width: 100%; /* Per adattare l'immagine alla larghezza della finestra */
+            width: 2000px; /* Per adattare l'immagine alla larghezza della finestra */
             height: 1000px; /* Mantiene le proporzioni dell'immagine */
             margin-bottom: 20px; /* Spazio sotto l'immagine */
         }
