--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
             font-family: Arial, sans-serif;
         }
         h1 {
-            margin-bottom: 20px; /* Spazio tra il titolo e gli altri elementi */
+            margin-bottom: 1px; /* Spazio tra il titolo e gli altri elementi */
         }
         #risposta {
-            font-size: 200px; /* Grandezza del testo */
+            font-size: 400px; /* Grandezza del testo */
             color: red;       /* Colore rosso */
             font-weight: bold;
             text-transform: uppercase; /* Trasforma il testo in maiuscolo */
             margin-bottom: 1px; /* Spazio tra la risposta e il campo di input */
         }
         #coser {
-            font-size: 40px;
+            font-size: 100px;
             font-weight: bold;
-            color: blue; /* Puoi scegliere un altro colore */
+            color: purple; /* Puoi scegliere un altro colore */
             margin-bottom: 30px; /* Distanza tra il testo "COSER" e il resto */
         }
         img {
