--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
     <!-- Paragrafo con l'ID coser -->
     <p id="coser">COSER SPOGLIATIIIIIIIIIIIIIIIIIIIIIIIIII</p>
 
+    <!-- Risposta sopra la casella di input -->
+    <p id="risposta"></p>
+
     <h1>Inserisci un numero</h1>
     <label for="numeroInput">Numero:</label>
     <input type="text" id="numeroInput" placeholder="Scrivi un numero" oninput="mostraRisposta()">
-    <p id="risposta"></p>
 </body>
 </html>
